--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./back
       dockerfile: Dockerfile
     ports:
-      - "8080:8900"
+      - "8078:8900"
     volumes:
       - ./back/pb_data/:/pb_data/
   front:
@@ -14,8 +14,8 @@ services:
     build: 
       context: ./front
       dockerfile: Dockerfile
-    environment:
-      - PUBLIC_POCKETBASE_URL:http://127.0.0.1:8090
+    env_file:
+      - .env
     ports:
       - "3000:5173"
     depends_on:
